# dotmac_framework

./: .editorconfig  .env.example  .gitignore  .pre-commit-config-exception-check.yaml  .pre-commit-config.yaml  .production-optimization.md  .quality-gates.yml  .service-standards.json  0_CI Status.txt  3_Frontend Tests (management-portal_tenant, mgmt-tenant).txt  4_Frontend Tests (isp-framework_reseller, isp-reseller).txt  5_Frontend Tests (management-portal_admin, mgmt-admin).txt  6_Frontend Tests (isp-framework_admin, isp-admin).txt  7_Frontend Tests (isp-framework_customer, isp-customer).txt  8_Detect Changes.txt  9_Security Scan.txt  ACTUAL_IMPLEMENTATION_STATUS.md  API_DOCUMENTATION.md  ASYNC_STANDARDIZATION_GUIDE.md  AUTOMATION_GUIDE.md  BACKEND_DOCKER_CLEANUP_SUMMARY.md  BLOCKING_ISSUES_ANALYSIS.md  BUSINESS_MODEL_VISION.md  CHANGELOG.md  CLAUDE.md  COMPLETE_DOCKER_CLEANUP_FINAL.md  COMPREHENSIVE_MONITORING_OBSERVABILITY_SUMMARY.md  COMPREHENSIVE_PRODUCTION_ANALYSIS_COMPLETE.md  COMPREHENSIVE_USER_JOURNEY_ANALYSIS.md  CONFIGURATION_MIGRATION_GUIDE.md  CONTAINER_PER_TENANT_IMPROVEMENTS.md  CONTRIBUTING.md  COOLIFY_PRODUCTION_DEPLOYMENT.md  COOLIFY_SETUP.md  CRITICAL_FRONTEND_ANALYSIS_REPORT.md  DATABASE_CONNECTION_ANALYSIS.md  DATABASE_PERFORMANCE_ENGINEER_DELIVERABLES.md  DAY_1_COMPLETION_REPORT.md  DAY_4_API_SECURITY_SUMMARY.md  DEPENDENCY_CONSOLIDATION_RESULTS.md  (+185 more)
backend/dotmac_api_gateway/: Dockerfile  README.md  main_instrumented.py  pyproject.toml  requirements.txt
backend/dotmac_billing/: Dockerfile  IMPLEMENTATION_SUMMARY.md  alembic.ini  pyproject.toml
backend/dotmac_core_ops/: README.md  main.py  pyproject.toml
backend/dotmac_devtools/: Dockerfile  README.md  pyproject.toml
backend/dotmac_identity/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/dotmac_networking/: Dockerfile  README.md  pyproject.toml  requirements-enhanced.txt  requirements.txt
backend/dotmac_services/: Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: AI_FIRST_TESTING_STRATEGY.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CODEBASE_PROFESSIONALIZATION_REPORT.md  CODE_QUALITY_CHEATSHEET.md  COMPLETE_ISP_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_TRAINING_GUIDE.md  COMPREHENSIVE_TROUBLESHOOTING_GUIDE.md  CONFIGURATION_GUIDE.md  DATABASE_ARCHITECTURE.md  DATABASE_MIGRATIONS.md  DATABASE_MIGRATION_PROCEDURES.md  DEPLOYMENT_GUIDE.md  DEVELOPER_ONBOARDING.md  DOCUMENTATION_PROBLEMS_ANALYSIS.md  EXCEPTION_HANDLING_ENFORCEMENT.md  LICENSING_ARCHITECTURE.md  MIGRATION_GUIDE.md  MULTI_APP_PLATFORM.md  Makefile  ON_CALL_RUNBOOK.md  OPENBAO_HEALTH_CHECK_FIX.md  OPERATIONS_GUIDE.md  PORTAL_DEVELOPMENT_STANDARDS.md  PRODUCTION_DEPLOYMENT_RUNBOOK.md  PROD_BASELINE.md  PROJECT_STRUCTURE.md  README.md  SECURITY_PRODUCTION_CHECKLIST.md  SECURITY_TEMPLATE_GUIDE.md  SIGNOZ_MIGRATION_PLAN.md  TEST_COVERAGE_EXPANSION_SUMMARY.md  VPS_CUSTOMER_SERVICE.md  api_reference.rst  build_docs.sh  check_dependencies.py  conf.py  docker-compose.docs.yml  index.rst  (+5 more)
docs/_static/: custom.css
docs/api/: API_SUMMARY.md  README.md  dotmac_isp.api.file_router.rst  dotmac_isp.api.plugins_endpoints.rst  dotmac_isp.api.routers.rst  dotmac_isp.api.rst  dotmac_isp.api.security_endpoints.rst  dotmac_isp.api.unified_auth.rst  dotmac_isp.api.websocket_router.rst  dotmac_isp.app.rst  dotmac_isp.core.audit_middleware.rst  dotmac_isp.core.audit_trail.rst  dotmac_isp.core.billing_events.rst  dotmac_isp.core.business_rules.rst  dotmac_isp.core.caching_middleware.rst  dotmac_isp.core.celery_app.rst  dotmac_isp.core.communication_bridge.rst  dotmac_isp.core.config_audit.rst  dotmac_isp.core.config_backup.rst  dotmac_isp.core.config_disaster_recovery.rst  dotmac_isp.core.config_encryption.rst  dotmac_isp.core.config_hotreload.rst  dotmac_isp.core.config_validation_strategies.rst  dotmac_isp.core.cross_platform_events.rst  dotmac_isp.core.database.rst  dotmac_isp.core.db_monitoring.rst  dotmac_isp.core.dependency_health.rst  dotmac_isp.core.encryption.rst  dotmac_isp.core.enhanced_settings.rst  dotmac_isp.core.events.base.rst  dotmac_isp.core.events.kafka_adapter.rst  (+265 more)
isp-framework/: .coveragerc-ai  .env.example  .gitconfig  .gitignore  .gitmessage  .pre-commit-config.yaml  .service-standards.json  AI_FIRST_IMPLEMENTATION_SUMMARY.md  API_AUDIT_MAPPING.md  API_REFERENCE.md  API_TEST_SUMMARY.md  ARCHITECTURE.md  BACKEND_TEST_RESULTS.md  CONFIGURATION_API.md  CONTAINER_UPDATE_STRATEGY.md  CONTRIBUTING.md  CRITICAL_CODE_QUALITY_ANALYSIS.md  CRITICAL_SECURITY_VULNERABILITIES_FIXED.md  DEVELOPER_GUIDE.md  DOCKER_DEPLOYMENT_STATUS.md  Dockerfile  EMERGENCY_FILE_SPLITTING_SUMMARY.md  ENUM_REGISTRY.md  FIXES_APPLIED.md  FRONTEND_INTEGRATION_COMPLETE.md  FULL_TEST_RESULTS_SUMMARY.md  Makefile  Makefile.readiness  OUTSTANDING_IMPLEMENTATIONS_ANALYSIS.md  PLUGIN_INSTALLATION_GUIDE.md  PORTAL_ID_SYSTEM_GUIDE.md  QUALITY_REPORT.md  QUALITY_SPRINT_COMPLETION_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TECHNICAL_REVIEW.md  TESTING_INFRASTRUCTURE_IMPLEMENTATION_COMPLETE.md  TEST_EXECUTION_RESULTS_SUMMARY.md  VENDOR_PLUGIN_ARCHITECTURE.md  (+28 more)
management-platform/: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  COMPREHENSIVE_FIX_REPORT.md  CROSS_PLATFORM_CONFIG_API.md  DEVELOPER_GUIDE.md  Dockerfile  MANAGEMENT_PLATFORM_GAPS_ANALYSIS.md  MONOLITH_ARCHITECTURE.md  Makefile  PRODUCTION_READINESS.md  README.md  README_CONFIGURATION_SECURITY.md  SAAS_PORTAL_IMPLEMENTATION_REPORT.md  alembic.ini  comprehensive_manual_fix.py  comprehensive_syntax_fixer.py  critical_syntax_fixes.py  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.security.yml  docker-compose.yml  env.production.template  final_comprehensive_fix.py  final_syntax_check.py  fix_dashboard_syntax.py  fix_syntax.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_demo.py  syntax_check_report.json  syntax_checker.py  syntax_error_report.txt  syntax_fixer.py  test_code_quality.py  (+1 more)
src/: __init__.py  pyproject.toml
(+5492 files in other folders)
