[project]
name = "dotmac-framework"
version = "0.1.0"
description = "DotMac ISP Framework - Production-ready ISP management platform"
authors = [{name = "DotMac Team", email = "team@dotmac.io"}]
readme = "README.md"
requires-python = ">=3.9"
dynamic = []
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
    "redis>=4.6.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "structlog>=23.1.0",
    # GIS and Spatial Dependencies
    "geoalchemy2>=0.14.0",
    "shapely>=2.0.0",
    "geopy>=2.3.0",
    "networkx>=3.1.0",
    # OpenTelemetry Dependencies for SigNoz Integration
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-asgi>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0", 
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0"
]

# Package discovery is handled by setuptools automatically from src/
# All packages under src/ will be included in the distribution

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.11.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.0",
    "responses>=0.23.0",
    "ruff>=0.0.280",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "pytest-benchmark>=4.0.0",
    "locust>=2.15.0",
    "playwright>=1.55.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings>=0.22.0"
]

# Scripts are handled by direct commands - use poetry run pytest, poetry run ruff, etc.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Tests that take longer than 1 second"
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]
src = ["src", "tests"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info"
]

[tool.black]
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | __pycache__
  | build
  | dist
  | \.pytest_cache
  | \.venv
)/
'''

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
exclude = ["build/", "dist/"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["src"], include = ["dotmac_*"]}}
package-dir = {"" = "src"}
