[tool.poetry]
name = "dotmac-docs"
version = "1.0.0"
description = "DotMac Framework Documentation"
authors = ["DotMac Team <support@dotmac.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.0"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
